Remove use of deprecated Java CMS GC.
The default GC in Java 9 is G1GC which appears best suited for our setup.

Change-Id: I45953f3755aa05b6f1ef4f80676055425c49e40d